<resources>
    <string name="app_name">BarCode Reader</string>
    <string name="scan">Scan</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_header">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--Drawer Menus-->
    <string name="change_password">Change Password</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>
    <string name="payment">Payment</string>

    <!--about fragment-->
    <string name="project_info">Author : Xuan Truong, Description: Scan barcode and management product</string>

    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>


    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--payment-->
    <string name="title">Payment</string>
    <string name="bar_code">Bar Code</string>
    <string name="report">Report</string>

    <!--product item-->
    <string name="buy_us">Buy</string>
    <string name="msg_no_product_found">No product found</string>
    <string name="buy">Buy</string>
    <string name="product_id">ID</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_date">Date</string>
    <string name="product_number">Number</string>

    <!--bottom navigation-->

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
