<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/nav_item_payment"
            android:checked="true"
            android:icon="@drawable/ic_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_item_change_password"
            android:checked="true"
            android:icon="@drawable/ic_change_password"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_item_logout"
            android:checked="true"
            android:icon="@drawable/ic_power_settings_new_24px"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_item_rate_us"
            android:checked="true"
            android:icon="@drawable/ic_star"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_item_about"
            android:checked="true"
            android:icon="@drawable/ic_info_24px"
            android:title="@string/about" />
    </group>
</menu>