<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_tool"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery"/>
        <item
            android:id="@+id/nav_item_change_password"
            android:icon="@drawable/ic_change_password"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_power_settings_new_24px"
            android:title="@string/logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
            <item
                android:id="@+id/nav_item_rate_us"
                android:icon="@drawable/ic_star"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_item_about"
                android:icon="@drawable/ic_info_24px"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
